Fixed spacing issue in course page

--- a/frontend/src/containers/Course/Course.scss
+++ b/frontend/src/containers/Course/Course.scss
@@ -981,7 +981,7 @@
     }
 
     @media screen and (max-width: 768px) {
-      padding: 4rem 0 4rem 0;
+      padding: 2rem 0 4rem 0;
       width: 90%;
       margin-top: 0;
     }
